<resources>
    <string name="app_name">Recipe</string>

    <string name="action_about">About</string>
    <string name="action_privacy">Privacy Policy</string>
    <string name="action_settings">Settings</string>
    <string name="action_feedback">Send Feedback</string>
    <string name="action_rate">Rate This App</string>

    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="cancel">Cancel</string>

    <string name="add_photo_to_start">Add Photo To Start!</string>
    <string name="analyze_photo">Analyzing photo...</string>

    <string name="tab1_title">LIVE</string>
    <string name="tab2_title">RESULTS</string>
    <string name="tab3_title">FAV</string>

    <string name="error_take_photo">Unable to take photo from camera</string>
    <string name="error_select_photo">Unable to select photo from gallery</string>
</resources>
